@@ -1,5 +1,13 @@
 2015-01-13  Ola Jeppsson  <ola@adapteva.com>
 
+	* src/e-hal/src/epiphany-hal-data.h: Rename all occurrences of
+	'field' in ESYS register structs to 'fields'.
+	* src/e-hal/src/epiphany-hal.c (int e_reset_system): Adjust for
+	above change.
+	(int ee_disable_system): Likewise.
+
+2015-01-13  Ola Jeppsson  <ola@adapteva.com>
+
 	* src/e-hal/src/epiphany-hal.c (int e_reset_system): Set e-link TX
 	clock divider back to 4 for select platforms.
 
